
 o llines, lpoints and ltext are now generic functions

 o The high level 'key' argument can now have an argument called
   'reverse.rows' to reverse the order of rows.  This applies to
   'draw.key', 'auto.key' and 'simpleKey' as well.

changes in behaviour
--------------------

 o panel function is no longer given arguments panel.number and
   packet.number (see above for alternatives)





Changes in lattice 0.13
=======================


new features
------------

 o high level generics like 'xyplot' now have both 'x' and 'data' as
   arguments.  The only implication for S3 methods is that they will
   have to include the 'data' argument even if they are unused (as
   they should be when 'x' is not a formula).  The reason for doing
   this is to encourage S4 methods using multiple dispatch where 'x'
   is a formula and 'data' is some other data source.

 o R messages are now translatable.

 o French translations courtesy of Philippe Grosjean.

 o instead of ignoring it as before, 'panel.xyplot' and
   'panel.densityplot' now deal with a 'groups' argument appropriately
   by calling 'panel.superpose'.  Consequently, the default of 'panel'
   in 'xyplot' etc does not need to be conditional on 'groups'.

 o added 'lineheight' as a graphical parameter where appropriate. 

 o added a 'grid.pars' setting for arbitrary grid parameters to be
   set initially via gpar().

 o For a shingle 'x', 'as.character(levels(x))' creates meaningful
   labels.

 o Shingle levels can now be printed by strip.default.

 o The strip function, like the panel function, is now passed
   arguments 'packet.number' and 'panel.number' (although the default
   strip function makes no use of it).

 o 'panel.superpose' has new argument to make it bahave like in S-PLUS
   (interpretation of 'type').  This makes 'panel.superpose.2'
   unnecessary, although it's still available.

 o Added wrappers lrect, lpolygon (and panel.rect, panel.polygon)



changes in behaviour
--------------------
